makefile with config option and minimal Emscripten shell template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,6 +50,9 @@
         "tuple": "cpp",
         "typeinfo": "cpp",
         "variant": "cpp",
-        "algorithm": "cpp"
-    }
+        "algorithm": "cpp",
+        "charconv": "cpp",
+        "sstream": "cpp"
+    },
+    "makefile.makefilePath": "Makefile"
 }
