--- a/Makefile_web
+++ b/Makefile_web
@@ -6,7 +6,7 @@ TARGET_EXEC ?= index.html
 BUILD_DIR ?= ./build_web
 SRC_DIRS ?= ./src ./include ./imgui
 EXTRA_SRCS ?= ./imgui/backends/imgui_impl_sdl2.cpp ./imgui/backends/imgui_impl_opengl3.cpp
-EM_HTML ?= ./web_template.html
+EM_HTML ?= ./src/web_template.html
 
 CC = emcc
 CXX = em++
